# fishing-time-2d

./: .clang-format  .editorconfig  .gitgnore  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.txt  build.sh
resources/: spritesheet.json
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  build_config.h.in  config.h  entity.c  entity.h  game.c  game.h  libmath.h  log.h  main.c  render.c  render.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  window.c  window.h
src/engine/: animation.c  animation.h  assertions.c  assertions.h  collision.c  collision.h  engine.c  engine.h  entity.c  entity.h  files.c  files.h  fonts.c  fonts.h  images.c  images.h  inputs.c  inputs.h  libmath.h  log.c  log.h  path.c  path.h  resources.c  resources.h  shader.c  shader.h  sprite.c  sprite.h  str.c  str.h  texture.c  texture.h  types.h  window.c  window.h
src/gameplay/: boat.c  boat.h  config.h  credits.c  credits.h  fishing.c  fishing.h  game.c  game.h  game_app.c  game_app.h  game_menus.c  game_menus.h  game_resources.c  game_resources.h  gameover.c  gameover.h  shark.c  shark.h  welcome.c  welcome.h
